# nopecha-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nopecha/: __init__.py  _v1_compat.py  api_requestor.py  error.py  nopecha.py  nopecha_object.py
src/nopecha/api/: _base.py  _key.py  _throttle.py  _validate.py  aiohttp.py  httpx.py  requests.py  types.py  urllib.py
src/nopecha/extension/: __init__.py  _adapter.py  extension.py
