[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nopecha"
version = "2.0.0"
authors = [
	{ name="NopeCHA", email="contact@nopecha.com" },
]
description = "API bindings for the NopeCHA CAPTCHA-solving service."
readme = "README.md"
require_python = ">=3.7.1"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://nopecha.com"
Documentation = "https://developers.nopecha.com"
"GitHub Repository" = "https://github.com/NopeCHALLC/nopecha-python"

